Add ARCHITECTURE doc; update docs & compose
Add a comprehensive ARCHITECTURE.md describing the RTB bidder design, pipeline, modules, and operational guidance. Update docker-compose.yml to add seccomp:unconfined for ClickHouse (suppresses macOS get_mempolicy warnings for local dev). Revise docs/GUIDE.md to normalize docker commands (docker-compose), simplify Redis seeding command, add a JVM flag for unsafe memory access in the run sample, and adjust several how-to instructions. Also include minor build/runtime tweaks (mvnw, pom.xml) and small application/logging adjustments (Application.java, logback.xml).